--- a/public/posts/n.mdx
+++ b/public/posts/n.mdx
@@ -1,3 +1,8 @@
+---
+title: AAAA
+date: "May 20 2022"
+description: "a"
+---
 necessarily involves management but not traditional management principles that can't handle the chaos of startups
 
 startup = "a human institution designed to create a new product or service under conditions of extreme uncertainty"
