--- a/public/blog/website.mdx
+++ b/public/blog/website.mdx
@@ -1,6 +1,6 @@
 ---
-title: This Website
-date: "May 8 2022"
-description: how this site works
+title: Using Next.JS + Chakra UI For a Responsive Website and Blog
+date: "August 8 2022"
+description: Tidbits and pitpalls with making this website
 ---
 Welcome! In this first post, I will talk briefly how this website was made and how one can make a website using next.js with typescript using chakra for frontend components with support for mdx blog pages.
