--- a/public/blog/n.mdx
+++ b/public/blog/n.mdx
@@ -1,6 +1,6 @@
 ---
 title: AAAA
-date: "May 20 2022"
+date: "May 20, 2022"
 description: "a"
 ---
 necessarily involves management but not traditional management principles that can't handle the chaos of startups
