--- a/public/blog/website.mdx
+++ b/public/blog/website.mdx
@@ -1,6 +1,6 @@
 ---
-title: Using Next.JS + Chakra UI For a Responsive Website and Blog
-date: "August 8 2022"
-description: Tidbits and pitpalls with making this website
+title: Using Next.JS + Chakra UI For Responsive Website and Blog
+date: "August 8, 2022"
+description: Overview of this website's construction and Tips for Using This Tech Stack
 ---
-Welcome! In this first post, I will talk briefly how this website was made and how one can make a website using next.js with typescript using chakra for frontend components with support for mdx blog pages.
+Welcome! In this first post, I will talk briefly how this website was made and how one can make a website using next.js with typescript using chakra UI for frontend components with support for mdx blog pages.
