blog post update

--- a/public/blog/website-dev-next-js-chakra-ui.mdx
+++ b/public/blog/website-dev-next-js-chakra-ui.mdx
@@ -1,24 +1,31 @@
 ---
 title: Using Next.js + Chakra UI For Responsive Website and Blog
-date: August 8, 2022
+date: September 7, 2022
 description: Overview of This website's Construction and Tips for Using Next.js, Chakra UI With Typescript
 ---
-import { Text } from "@chakra-ui/react";
 
-# Next.js 1
-Next.js is essentially a frontend framework built on top of React.js with many nice features for development and user experience added on top. Why would you choose Next.js over React.js? Out of the box, Next.js supports server side rendering (SSR) and static site generation (SSG), of which we'll be using SSG for the blog pages for faster user experience. SSR pre-renders the page on the server at every request, so the data will be up to date. SSG will pre-render the page at build time and can provide the static site to be served instantly, though the data may become stale. By default, React uses client side rendering (CSR) a.k.a. single page application (SPA), which sends a js file to the client, where the client browser will then generate the page. Though it is possible to set up SSR or SSG in React, it would require setting up your server and configuration, whereas Next.js natively supports these with just a couple lines of code.
+import NavItemText from "../components/NavItemText.tsx";
 
-## Chakra UI 2
+<link rel="stylesheet" href="https://unpkg.com/dracula-prism/dist/css/dracula-prism.min.css" />
+
+# Next.js
+Next.js is essentially a frontend framework built on top of React.js with many nice features for development and user experience added on top. But why would you choose Next.js over React.js? 
+
+Out of the box, Next.js supports server side rendering (SSR) and static site generation (SSG), of which we'll be using SSG for the blog pages for faster user experience. SSR pre-renders the page on the server at every request, so the data will be up to date. SSG will pre-render the page at build time and can provide the static site to be served instantly, though the data may become stale. 
+
+By default, React uses client side rendering (CSR) a.k.a. single page application (SPA), which sends a js file to the client, where the client browser will then generate the page. Though it is possible to set up SSR or SSG in React, it would require setting up your server and configuration, whereas Next.js natively supports these with just a couple lines of code.
+
+Next additionally simplifies React routing by providing a pages folder, in which all tsx/jsx files that you put in there will automatically become routes. This gets rid of the need for react-router-dom and makes the process easier overall.
+
+# Chakra UI
 Chakra UI is a component library that provides many React components with premade styling props to help style components easier. For instance, it provides the component Button along with many props such as colorScheme and size, which will all adhere to Chakra's styling for a consistent application frontend.
 
-### Compiling MDX documents
-
-I found integrating MDX documents that supported both latex and components to be a headache to figure out, so I wanted to write out what I had found. I found [this article](https://dev.to/tylerlwsmith/quick-comparison-of-mdx-integration-strategies-with-next-js-1kcm) by Tyler Smith to be super helpful. After testing, I found
-1. [@next/mdx](https://www.npmjs.com/package/@next/mdx) to be lacking in documentation without support for frontmatter
-2. [next-mdx-remote](https://www.npmjs.com/package/next-mdx-remote) to not support latex compilers like KaTex ([Github Issue](https://github.com/hashicorp/next-mdx-remote/issues/221)) at their most recent versions
-3. [mdx-bundler](https://www.npmjs.com/package/mdx-bundler) worked well
-<span style={{color:"blue"}}>some *blue* text</span>
-```
+# MDX
+I found integrating MDX documents that supported both latex and components to be a headache to figure out, so I wanted to write out what I had found. I found <NavItemText label="this article" url="https://dev.to/tylerlwsmith/quick-comparison-of-mdx-integration-strategies-with-next-js-1kcm" isExternal={true} /> by Tyler Smith to be super helpful. After testing, I found
+1. <NavItemText label="@next/mdx" url="https://www.npmjs.com/package/@next/mdx" isExternal={true} /> to be lacking in documentation without support for frontmatter
+2. <NavItemText label="next-mdx-remote" url="https://www.npmjs.com/package/next-mdx-remote" isExternal={true} /> to not support latex compilers like KaTex (<NavItemText label="Github Issue" url="https://github.com/hashicorp/next-mdx-remote/issues/221" isExternal={true} />) at their most recent versions
+3. <NavItemText label="mdx-bundler" url="https://www.npmjs.com/package/mdx-bundler" isExternal={true} /> worked well
+```js
 export const getStaticProps = async ({ params }: Path) => {
     const post: MdxBody = await getPost(params.slug);
     return {
