--- a/public/writings/test.mdx
+++ b/public/writings/test.mdx
@@ -1,12 +1,8 @@
 ---
-title: Using Next.js + Chakra UI For Responsive Website and Blog
+title: Building an OS With C Part 1
 date: September 7, 2022
 description: Overview of This website's Construction and Tips for Using Next.js, Chakra UI With Typescript
 ---
-
-import NavItemText from "../components/NavItemText.tsx";
-
-<link rel="stylesheet" href="https://unpkg.com/dracula-prism/dist/css/dracula-prism.min.css" />
 
 # Next.js
 Next.js is essentially a frontend framework built on top of React.js with many nice features for development and user experience added on top. But why would you choose Next.js over React.js? 
@@ -19,12 +15,6 @@ Next additionally simplifies React routing by providing a pages folder, in which
 
 # Chakra UI
 Chakra UI is a component library that provides many React components with premade styling props to help style components easier. For instance, it provides the component Button along with many props such as colorScheme and size, which will all adhere to Chakra's styling for a consistent application frontend.
-
-# MDX
-I found integrating MDX documents that supported both latex and components to be a headache to figure out, so I wanted to write out what I had found. I found <NavItemText label="this article" url="https://dev.to/tylerlwsmith/quick-comparison-of-mdx-integration-strategies-with-next-js-1kcm" isExternal={true} /> by Tyler Smith to be super helpful. After testing, I found
-1. <NavItemText label="@next/mdx" url="https://www.npmjs.com/package/@next/mdx" isExternal={true} /> to be lacking in documentation without support for frontmatter
-2. <NavItemText label="next-mdx-remote" url="https://www.npmjs.com/package/next-mdx-remote" isExternal={true} /> to not support latex compilers like KaTex (<NavItemText label="Github Issue" url="https://github.com/hashicorp/next-mdx-remote/issues/221" isExternal={true} />) at their most recent versions
-3. <NavItemText label="mdx-bundler" url="https://www.npmjs.com/package/mdx-bundler" isExternal={true} /> worked well
 
 ```js
 export const getStaticProps = async ({ params }: Path) => {
